--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>يلدرم صلاح الدين حسين - السيرة الرسمية</title>
 </head>
 <body>
   <h1>يلدرم صلاح الدين حسين</h1>
-  <p>أستاذ جامعي في كلية الإدارة والاقتصاد بجامعة كركوك، ومخترع أول براءة اختراع عراقية وعالمية في مجال خوارزميات الذكاء الاصطناعي، خصوصًا في البحث داخل الأرشيفات غير المنظمة.</p>
-  <p>قام بتطوير برنامج "Search" الذكي، والذي يستخدم خوارزميات OCR وBlockchain وتقنيات تحليل الوثائق غير المفهرسة. تم توثيق البراءة باستخدام OriginStamp وحصل على اعتراف رسمي من وزارة التخطيط العراقية.</p>
+  <p>أستاذ جامعي في كلية الإدارة والاقتصاد بجامعة كركوك.</p>
+  <p>مخترع وصاحب أول براءة اختراع عراقية وعالمية في مجال خوارزميات الذكاء الاصطناعي، خاصة للبحث داخل الأرشيفات غير المنظمة.</p>
+  <p>أنشأ برنامجاً ذكياً يستخدم تقنيات الذكاء الاصطناعي لتحليل والبحث داخل الأرشيفات والوثائق بشكل فعال، وقد تم توثيق براءة اختراعه باستخدام تقنية التوثيق الزمني OriginStamp، كما حصل على الاعتراف الرسمي من وزارة التخطيط العراقية، وعُرض المشروع في كلية الإدارة والاقتصاد – جامعة كركوك.</p>
+  <p>يُعتبر من الرواد في مجال الذكاء الاصطناعي في العراق، وله مساهمات بحثية وعلمية مهمة في تطوير تطبيقات الذكاء الاصطناعي. وهو متخصص وخبير في الإحصاء والبرمجة.</p>
   <h2>الروابط الرسمية</h2>
   <ul>
-    <li><a href="https://verify.originstamp.com" target="_blank">OriginStamp</a></li>
-    <li><a href="https://www.instagram.com/yildirim_s_h" target="_blank">Instagram</a></li>
-    <li><a href="https://www.linkedin.com/in/yildirim-s-h-492b65117" target="_blank">LinkedIn</a></li>
-    <li><a href="https://g.co/kgs/BPUmRV4" target="_blank">Google Knowledge Panel</a></li>
+    <li><a href="https://verify.originstamp.com">OriginStamp</a></li>
+    <li><a href="https://www.instagram.com/yildirim_s_h">Instagram</a></li>
+    <li><a href="https://www.linkedin.com/in/yildirim-s-h-492b65117">LinkedIn</a></li>
+    <li><a href="https://g.co/kgs/BPUmRV4">Google Knowledge Panel</a></li>
   </ul>
+  <p><a href="index-en.html">English</a> | <a href="index-tr.html">Türkçe</a></p>
 </body>
 </html>
