--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 </head>
 <body>
   <h1>يلدرم صلاح الدين حسين</h1>
-  <p>أستاذ جامعي في كلية الإدارة والاقتصاد بجامعة كركوك.</p>
-  <p>مخترع وصاحب أول براءة اختراع عراقية وعالمية في مجال خوارزميات الذكاء الاصطناعي، خاصة للبحث داخل الأرشيفات غير المنظمة.</p>
-  <p>أنشأ برنامجاً ذكياً يستخدم تقنيات الذكاء الاصطناعي لتحليل والبحث داخل الأرشيفات والوثائق بشكل فعال، وقد تم توثيق براءة اختراعه باستخدام تقنية التوثيق الزمني OriginStamp، كما حصل على الاعتراف الرسمي من وزارة التخطيط العراقية، وعُرض المشروع في كلية الإدارة والاقتصاد – جامعة كركوك.</p>
-  <p>يُعتبر من الرواد في مجال الذكاء الاصطناعي في العراق، وله مساهمات بحثية وعلمية مهمة في تطوير تطبيقات الذكاء الاصطناعي. وهو متخصص وخبير في الإحصاء والبرمجة.</p>
+  <p>باحث ومخترع عراقي من مواليد محافظة كركوك، حاصل على شهادة عليا في الإحصاء التطبيقي، وخبير في البرمجة والذكاء الاصطناعي.</p>
+  <p>يُعتبر أول باحث عراقي يُطوّر نظاماً ذكياً متكاملاً للبحث داخل الأرشيفات غير المفهرسة باستخدام خوارزميات الذكاء الاصطناعي وتقنيات OCR وNLP، وقد تم توثيق جميع برامجه باستخدام منصات موثوقة مثل OriginStamp وScoreDetect.</p>
+  <h2>البرامج الموثّقة</h2>
+  <ul>
+    <li>برنامج <strong>Search</strong> لتحليل الوثائق غير المفهرسة بالذكاء الاصطناعي.</li>
+    <li>برنامج <strong>Smastatic</strong> للتحليل الإحصائي الذكي للبيانات.</li>
+    <li>برنامج <strong>Chot</strong> مساعد ذكي متعدد المهام.</li>
+    <li>برنامج <strong>Smadent</strong> لتحليل أشعة الأسنان باستخدام تقنيات الذكاء الاصطناعي وتوليد تقارير تشخيصية دقيقة.</li>
+  </ul>
+  <h2>الإصدارات الأكاديمية</h2>
+  <ul>
+    <li>كتاب بعنوان: <strong>«مراكز بحوث التكنولوجيا المتقدمة (ذكاء اصطناعي)»</strong> موثّق ضمن النشاطات العلمية.</li>
+  </ul>
+  <p>جميع الأعمال موثّقة دوليًا عبر <strong>OriginStamp</strong> و <strong>ScoreDetect</strong> لضمان الملكية الفكرية والحقوق الرقمية.</p>
   <h2>الروابط الرسمية</h2>
   <ul>
     <li><a href="https://verify.originstamp.com">OriginStamp</a></li>
