--- a/index-tr.html
+++ b/index-tr.html
@@ -7,10 +7,24 @@
 </head>
 <body>
   <h1>Yıldırım Salahaldin Hüseyin</h1>
-  <p>Kerkük Üniversitesi İktisat ve İdare Fakültesi'nde üniversite profesörüdür.</p>
-  <p>Yapay zekâ algoritmaları alanında, özellikle yapılandırılmamış arşivlerde arama üzerine, Irak ve dünya genelinde ilk patenti alan mucittir.</p>
-  <p>Belgeleri ve arşivleri etkili bir şekilde analiz etmek ve araştırmak için yapay zekâ tekniklerini kullanan akıllı bir program geliştirmiştir. Bu buluş, OriginStamp zaman damgası teknolojisiyle belgelenmiş ve Irak Planlama Bakanlığı tarafından resmen tanınmıştır. Proje, Kerkük Üniversitesi İktisat ve İdare Fakültesi'nde sunulmuştur.</p>
-  <p>Irak'ta yapay zekâ alanının öncülerinden biri olarak kabul edilmektedir ve yapay zekâ uygulamalarının geliştirilmesine yönelik önemli bilimsel ve akademik katkılarda bulunmuştur. Ayrıca istatistik ve programlama alanlarında uzman ve uzmandır.</p>
+  <p>Kerkük doğumlu Iraklı bir araştırmacı ve mucittir. Uygulamalı istatistik, programlama ve yapay zekâ alanlarında uzmandır.</p>
+  <p>OCR ve NLP teknolojileriyle desteklenen yapay zekâ tabanlı algoritmalar kullanarak, dizinlenmemiş arşivlerde akıllı arama sağlayan Irak’ın ilk entegre akıllı sistemini geliştirmiştir. Tüm çalışmaları OriginStamp ve ScoreDetect gibi platformlarda resmî olarak belgelendirilmiştir.</p>
+
+  <h2>Kayıtlı Programlar</h2>
+  <ul>
+    <li><strong>Search</strong>: Yapılandırılmamış belgelerde akıllı arama ve analiz aracı.</li>
+    <li><strong>Smastatic</strong>: AI destekli istatistiksel veri analizi aracı.</li>
+    <li><strong>Chot</strong>: kişisel akıllı asistan.</li>
+    <li><strong>Smadent</strong>: Yapay zekâ ve makine öğrenmesi kullanarak diş röntgenlerini analiz eden gelişmiş sistem; doğru tanı raporları üretir.</li>
+  </ul>
+
+  <h2>Akademik Yayın</h2>
+  <ul>
+    <li><strong>“Gelişmiş Teknoloji Araştırma Merkezleri (Yapay Zekâ)”</strong> başlıklı kitap, bilimsel çalışmalar kapsamında yayımlanmış ve belgelenmiştir.</li>
+  </ul>
+
+  <p>Tüm eserler OriginStamp ve ScoreDetect aracılığıyla uluslararası düzeyde dijital olarak doğrulanmıştır.</p>
+
   <h2>Resmî Bağlantılar</h2>
   <ul>
     <li><a href="https://verify.originstamp.com">OriginStamp</a></li>
@@ -18,6 +32,7 @@
     <li><a href="https://www.linkedin.com/in/yildirim-s-h-492b65117">LinkedIn</a></li>
     <li><a href="https://g.co/kgs/BPUmRV4">Google Bilgi Paneli</a></li>
   </ul>
+
   <p><a href="index.html">العربية</a> | <a href="index-en.html">English</a></p>
 </body>
 </html>
