--- a/index-en.html
+++ b/index-en.html
@@ -7,10 +7,24 @@
 </head>
 <body>
   <h1>Yildirim Salahaldin Hussein</h1>
-  <p>A university professor at the College of Administration and Economics, University of Kirkuk.</p>
-  <p>He is the inventor and holder of the first Iraqi and international patent in the field of artificial intelligence algorithms, specifically for searching within unstructured archives.</p>
-  <p>He developed an intelligent program that utilizes AI techniques to analyze and search through documents and archives effectively. The patent was time-stamped using OriginStamp and officially recognized by the Iraqi Ministry of Planning. The project was presented at the College of Administration and Economics – University of Kirkuk.</p>
-  <p>He is considered one of the pioneers in AI in Iraq, with significant research and academic contributions in the development of AI applications. He is also a specialist and expert in statistics and programming.</p>
+  <p>Yildirim Salahaldin Hussein is an Iraqi researcher and inventor from Kirkuk, specialized in Applied Statistics, Programming, and Artificial Intelligence.</p>
+  <p>He developed Iraq’s first fully integrated smart system — among the first worldwide — for intelligent search within unstructured archives, utilizing AI-based algorithms, OCR, and NLP. All his works are officially documented using trusted platforms like OriginStamp and ScoreDetect.</p>
+
+  <h2>Verified Programs</h2>
+  <ul>
+    <li><strong>Search</strong>: Smart document search and analysis tool for unstructured data.</li>
+    <li><strong>SmartStat</strong>: AI-powered statistical data analysis tool.</li>
+    <li><strong>Chot</strong>: Bilingual intelligent assistant.</li>
+    <li><strong>Smadent</strong>: Advanced AI-based dental X-ray analysis system that generates accurate diagnostic reports using machine learning.</li>
+  </ul>
+
+  <h2>Academic Publication</h2>
+  <ul>
+    <li>Book titled: <strong>“Advanced Technology Research Centers (Artificial Intelligence)”</strong>, officially documented and published as part of scientific activities.</li>
+  </ul>
+
+  <p>All projects are internationally verified through <strong>OriginStamp</strong> and <strong>ScoreDetect</strong> to protect intellectual property and digital rights.</p>
+
   <h2>Official Links</h2>
   <ul>
     <li><a href="https://verify.originstamp.com">OriginStamp</a></li>
@@ -18,6 +32,7 @@
     <li><a href="https://www.linkedin.com/in/yildirim-s-h-492b65117">LinkedIn</a></li>
     <li><a href="https://g.co/kgs/BPUmRV4">Google Knowledge Panel</a></li>
   </ul>
+
   <p><a href="index.html">العربية</a> | <a href="index-tr.html">Türkçe</a></p>
 </body>
 </html>
